--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -39,7 +39,6 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: $SourceSansPro;
-	min-width: 640px;
 	font-size: 21px;
 }
 
@@ -168,6 +167,10 @@ header.site {
 			list-style-type: none;
 		}
 
+		li:last-child {
+			margin-right: 0;
+		}
+
 		.active {
 			color: #ffffdf;
 		}
@@ -208,8 +211,10 @@ header.site {
 			left: auto;
 			top: auto;
 			margin: 0 auto 30px auto;
-			width: 150px;
-			height: 150px;
+		}
+
+		.bio {
+			font-size: 30px;
 		}
 
 		.col-2 {
@@ -220,20 +225,25 @@ header.site {
 		nav.site {
 			float: none;
 			padding-top: 30px;
-
-			li {
-				font-size: 35px;
-			}
 		}
 
 		nav.social {
 			float: none;
 			padding-top: 35px;
+		}
+	}
 
+	@media screen and (max-width: 480px) {
+		padding: 0 20px;
+
+		.bio {
+			font-size: 21px;
+		}
+
+		nav.site {
 			li {
-				font-size: 70px;
-				line-height: 70px;
-				margin-right: 15px;
+				font-size: 18px;
+				margin-right: 12px;
 			}
 		}
 	}
@@ -241,7 +251,7 @@ header.site {
 
 footer.site {
 	height: 300px;
-	background: no-repeat top right;
+	background: no-repeat bottom right;
 	@include image-2x("../img/footer-speaker");
 	width: 100%;
 	margin: 50px auto 0 auto;
@@ -290,6 +300,10 @@ footer.site {
 				list-style-type: none;
 			}
 
+			li:last-child {
+				margin-right: 0;
+			}
+
 			.active {
 				color: #ffffdf;
 			}
@@ -310,6 +324,36 @@ footer.site {
 
 		background-size: 290px 200px;
 		height: 200px;
+	}
+
+	@media screen and (max-width: 480px) {
+		background-size: 50%;
+		margin-top: 20px;
+
+		h1 {
+			a {
+				width: 140px;
+				height: 25px;
+				background-size: 140px 25px;
+				margin-bottom: 5px;
+			}
+		}
+
+		.nav-meta {
+			padding-left: 20px;
+
+			nav.site {
+				li {
+					font-size: 16px;
+					margin-right: 12px;
+				}
+			}
+
+			.copyright {
+				font-size: 12px;
+				width: 70%;
+			}
+		}
 	}
 }
 
@@ -410,6 +454,11 @@ section.single-post {
 			font-size: 40px;
 			margin-bottom: 10px;
 			margin-top: -15px;
+
+			@media screen and (max-width: 480px) {
+				font-size: 30px;
+				margin-top: -5px;
+			}
 		}
 
 		.related {
@@ -481,13 +530,23 @@ section.single-post {
 
 			input {
 				float: left;
-				width: 300px;
+				width: 100%;
+				max-width: 300px;
 			}
 
 			.rss {
 				max-height: 1em; /* Stop auto text sizing on mobile */
 				font-size: 14px;
 				margin: 20px 0 0 0;
+			}
+
+			@media screen and (max-width: 480px) {
+				padding: 60px 30px 20px 30px;
+
+				h1 {
+					font-size: 26px;
+					margin-bottom: 20px;
+				}
 			}
 		}
 	}
@@ -801,6 +860,11 @@ section.single-post {
 		padding-bottom: 5px;
 		margin-bottom: 15px;
 		border-bottom: 1px solid #ddd;
+		
+		@media screen and (max-width: 480px) {
+			margin-top: -5px;
+			font-size: 18px;
+		}
 	}
 
 	.more {
@@ -842,6 +906,10 @@ section.single-post {
 		.entry-title {
 			font-size: 40px;
 			margin-bottom: 10px;
+
+			@media screen and (max-width: 480px) {
+				font-size: 30px;
+			}
 		}
 
 		.entry-meta {
@@ -856,7 +924,6 @@ section.single-post {
 		article {
 			overflow: hidden;
 			margin-bottom: 10px;
-			white-space: nowrap;
 			position: relative;
 		}
 
@@ -873,6 +940,18 @@ section.single-post {
 			width: 100%;
 			overflow: hidden;
 			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
+		@media screen and (max-width: 480px) {
+			time {
+				position: relative;
+			}
+
+			.entry-title {
+				padding: 0;
+				white-space: normal;
+			}
 		}
 	}
 
@@ -884,6 +963,10 @@ section.single-post {
 			float: left;
 			line-height: 40px;
 			margin-right: 5px;
+
+			@media screen and (max-width: 480px) {
+				line-height: 24px;
+			}
 		}
 
 		li {
@@ -1027,6 +1110,10 @@ section.single-post {
 					font-size: 14px;
 				}
 			}
+
+			@media screen and (max-width: 480px) {
+				display: none;
+			}
 		}
 	}
 }
@@ -1040,12 +1127,6 @@ section.single-post {
 
 	@media screen and (max-width: 880px) {
 		width: auto;
-	}
-
-	.entry-content {
-		a {
-			white-space: nowrap;
-		}
 	}
 }
 
@@ -1208,6 +1289,10 @@ div.portfolio-item div.photos a img {
 	.intro {
 		width: 72%;
 		margin-bottom: 50px;
+
+		@media screen and (max-width: 880px) {
+			width: auto;
+		}
 	}
 
 	ul.tabs {
@@ -1231,7 +1316,7 @@ div.portfolio-item div.photos a img {
 		a {
 			color: #999;
 			padding: 0.3em 0.8em;
-			line-height: 42px;
+			line-height: 2em;
 			border: 1px solid transparent;
 			border-radius: 4px 4px 0 0;
 		}
@@ -1282,31 +1367,48 @@ div.portfolio-item div.photos a img {
 	.project {
 		float: left;
 		padding: 30px 8px 15px 8px;
-		border-bottom: 1px solid #999;
-	}
+		border-bottom: 1px solid #ddd;
 
-	.project .scr img {
-		border: 0;
-		display: block;
-	}
+		.scr img {
+			border: 0;
+			display: block;
+		}
 
-	.project .scr {
-		display: block;
-		border: 1px solid #999;
-		margin-bottom: 10px;
-		width: 300px;
-		box-sizing: content-box;
-	}
+		.scr {
+			display: block;
+			border: 1px solid #ddd;
+			margin-bottom: 10px;
+			width: 300px;
+			box-sizing: content-box;
+		}		
 
-	h2 {
-		font-size: 1em;
-		margin: 0;
-		font-weight: normal;
-		width: 300px;
-	}
+		h2 {
+			font-size: 1em;
+			margin: 0;
+			font-weight: normal;
+			width: 300px;
+		}
 
-	h2 a {
-		color: #333;
+		h2 a {
+			color: #333;
+		}
+
+		@media screen and (max-width: 640px) {
+			float: none;
+
+			.scr {
+				width: 100%;
+
+				img {
+					width: 100%;
+					height: auto;
+				}
+			}
+
+			h2 {
+				width: auto;
+			}
+		}
 	}
 
 	.post-edit-link {
@@ -1609,5 +1711,17 @@ height: 45px;
 background-color:#FFFFFF;
 transform: translateY(-39px);
 }
+
+}
+
+@media screen and (max-width: 480px) {
+	.content {
+		padding: 20px;
+	}
+
+	.page-title {
+		font-size: 40px;
+		margin-top: -5px;
+	}
 
 }
