Default page template.

--- a/public_html/content/themes/bradtca/assets/css/style.css
+++ b/public_html/content/themes/bradtca/assets/css/style.css
@@ -568,6 +568,9 @@ section.single-post > article .subscribe .rss {
   }
 }
 
+.entry-content {
+  font-family: Lora, Arial, Helvetica, sans-serif;
+}
 .entry-content p {
   line-height: 1.7em;
 }
