--- a/public_html/content/themes/bradtca/assets/css/style.css
+++ b/public_html/content/themes/bradtca/assets/css/style.css
@@ -70,6 +70,59 @@ input[type=email], input[type=text], input[type=password], textarea {
   font-size: 16px;
 }
 
+button {
+  font-size: 16px;
+  padding: 0.5em 1.5em;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0088CC', endColorstr='#FF004466');
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0088cc), color-stop(100%, #006699));
+  background: -webkit-linear-gradient(#0088cc, #006699);
+  background: -moz-linear-gradient(#0088cc, #006699);
+  background: -o-linear-gradient(#0088cc, #006699);
+  background: linear-gradient(#0088cc, #006699);
+  -webkit-box-shadow: #1ab2ff 0 1px 0 inset;
+  -moz-box-shadow: #1ab2ff 0 1px 0 inset;
+  box-shadow: #1ab2ff 0 1px 0 inset;
+  border: 1px solid #005580;
+  color: white;
+  text-shadow: #003047 0 -1px 0;
+}
+button:hover {
+  text-decoration: none;
+}
+button:hover {
+  background-color: #005580;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0077b3), color-stop(100%, #005580));
+  background: -webkit-linear-gradient(#0077b3, #005580);
+  background: -moz-linear-gradient(#0077b3, #005580);
+  background: -o-linear-gradient(#0077b3, #005580);
+  background: linear-gradient(#0077b3, #005580);
+}
+button:active {
+  -webkit-box-shadow: #004b70 0 1px 2px inset;
+  -moz-box-shadow: #004b70 0 1px 2px inset;
+  box-shadow: #004b70 0 1px 2px inset;
+}
+button.disabled, button[disabled] {
+  opacity: 0.6;
+  background: #006699;
+  cursor: default;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+button::-moz-focus-inner {
+  padding: 0 !important;
+  margin: -1px !important;
+}
+
 ::-webkit-input-placeholder {
   font-style: italic;
 }
@@ -96,6 +149,7 @@ input[type=email], input[type=text], input[type=password], textarea {
   width: 100%;
   margin: 0 auto;
   max-width: 1070px;
+  min-height: 500px;
   background-color: #fafafa;
   position: relative;
   padding: 60px;
@@ -484,58 +538,6 @@ section.single-post > article .subscribe label {
   line-height: 44px;
   color: #666;
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-}
-section.single-post > article .subscribe button {
-  font-size: 16px;
-  padding: 0.5em 1.5em;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0088CC', endColorstr='#FF004466');
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0088cc), color-stop(100%, #006699));
-  background: -webkit-linear-gradient(#0088cc, #006699);
-  background: -moz-linear-gradient(#0088cc, #006699);
-  background: -o-linear-gradient(#0088cc, #006699);
-  background: linear-gradient(#0088cc, #006699);
-  -webkit-box-shadow: #1ab2ff 0 1px 0 inset;
-  -moz-box-shadow: #1ab2ff 0 1px 0 inset;
-  box-shadow: #1ab2ff 0 1px 0 inset;
-  border: 1px solid #005580;
-  color: white;
-  text-shadow: #003047 0 -1px 0;
-}
-section.single-post > article .subscribe button:hover {
-  text-decoration: none;
-}
-section.single-post > article .subscribe button:hover {
-  background-color: #005580;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0077b3), color-stop(100%, #005580));
-  background: -webkit-linear-gradient(#0077b3, #005580);
-  background: -moz-linear-gradient(#0077b3, #005580);
-  background: -o-linear-gradient(#0077b3, #005580);
-  background: linear-gradient(#0077b3, #005580);
-}
-section.single-post > article .subscribe button:active {
-  -webkit-box-shadow: #004b70 0 1px 2px inset;
-  -moz-box-shadow: #004b70 0 1px 2px inset;
-  box-shadow: #004b70 0 1px 2px inset;
-}
-section.single-post > article .subscribe button.disabled, section.single-post > article .subscribe button[disabled] {
-  opacity: 0.6;
-  background: #006699;
-  cursor: default;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-section.single-post > article .subscribe button::-moz-focus-inner {
-  padding: 0 !important;
-  margin: -1px !important;
 }
 section.single-post > article .subscribe input {
   float: left;
@@ -1144,56 +1146,6 @@ section.single-post > article .subscribe .rss {
 }
 .page-contact button {
   margin-left: 140px;
-  font-size: 16px;
-  padding: 0.5em 1.5em;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0088CC', endColorstr='#FF004466');
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0088cc), color-stop(100%, #006699));
-  background: -webkit-linear-gradient(#0088cc, #006699);
-  background: -moz-linear-gradient(#0088cc, #006699);
-  background: -o-linear-gradient(#0088cc, #006699);
-  background: linear-gradient(#0088cc, #006699);
-  -webkit-box-shadow: #1ab2ff 0 1px 0 inset;
-  -moz-box-shadow: #1ab2ff 0 1px 0 inset;
-  box-shadow: #1ab2ff 0 1px 0 inset;
-  border: 1px solid #005580;
-  color: white;
-  text-shadow: #003047 0 -1px 0;
-}
-.page-contact button:hover {
-  text-decoration: none;
-}
-.page-contact button:hover {
-  background-color: #005580;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0077b3), color-stop(100%, #005580));
-  background: -webkit-linear-gradient(#0077b3, #005580);
-  background: -moz-linear-gradient(#0077b3, #005580);
-  background: -o-linear-gradient(#0077b3, #005580);
-  background: linear-gradient(#0077b3, #005580);
-}
-.page-contact button:active {
-  -webkit-box-shadow: #004b70 0 1px 2px inset;
-  -moz-box-shadow: #004b70 0 1px 2px inset;
-  box-shadow: #004b70 0 1px 2px inset;
-}
-.page-contact button.disabled, .page-contact button[disabled] {
-  opacity: 0.6;
-  background: #006699;
-  cursor: default;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-.page-contact button::-moz-focus-inner {
-  padding: 0 !important;
-  margin: -1px !important;
 }
 @media screen and (max-width: 880px) {
   .page-contact .field-text label, .page-contact .field-textarea label {
@@ -1747,5 +1699,36 @@ div.portfolio-item div.photos a img {
   .page-title {
     font-size: 40px;
     margin-top: -5px;
+  }
+}
+.search-note {
+  font-size: 14px;
+  color: #666;
+}
+
+.page-404 .page-title {
+  margin-bottom: 10px;
+}
+.page-404 .entry-content {
+  width: 72%;
+}
+.page-404 .entry-content figure {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+.page-404 .entry-content figure iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@media screen and (max-width: 880px) {
+  .page-404 .entry-content {
+    width: auto;
   }
 }
