--- a/public_html/content/themes/bradtca/assets/css/style.css
+++ b/public_html/content/themes/bradtca/assets/css/style.css
@@ -943,6 +943,22 @@ section.single-post > article .subscribe .rss {
     white-space: normal;
   }
 }
+.front-page .sponsors {
+  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  margin-bottom: 100px;
+  font-size: 16px;
+}
+.front-page .sponsors ul {
+  overflow: hidden;
+}
+.front-page .sponsors li {
+  width: 50%;
+  min-width: 200px;
+  float: left;
+}
+.front-page .sponsors li:nth-child(2n+1) {
+  padding-right: 20px;
+}
 .front-page .tweets {
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
   margin-bottom: 100px;
