--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -961,6 +961,26 @@ section.single-post {
 		}
 	}
 
+	.sponsors {
+		font-family: $SourceSansPro;
+		margin-bottom: 100px;
+		font-size: 16px;
+
+		ul {
+			overflow: hidden;
+		}
+
+		li {
+			width: 50%;
+			min-width: 200px;
+			float: left;
+		}
+
+		li:nth-child(2n+1) {
+			padding-right: 20px;
+		}
+	}
+
 	.tweets {
 		font-family: $SourceSansPro;
 		margin-bottom: 100px;
