--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -863,7 +863,6 @@ section.single-post {
 
 	.section-title {
 		color: #bbb;
-		margin-top: -15px;
 		text-transform: uppercase;
 		font-weight: 800;
 		font-family: $SourceSansPro;
@@ -906,7 +905,11 @@ section.single-post {
 		margin-bottom: 75px;
 
 		.section-title {
-			font-size: 18px;
+			margin-top: -15px;
+
+			@media screen and (max-width: 480px) {
+				margin-top: -5px;
+			}
 		}
 
 		.entry-title {
