--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -473,9 +473,13 @@ section.single-post {
 			}
 		}
 
+		.yahoo-ads {
+			margin-bottom: 50px;
+		}
+
 		.subscribe {
 			clear: both;
-			margin: 50px 0 80px 0;
+			margin: 50px 0 50px 0;
 			padding: 50px 40px 30px 40px;
 			box-shadow: 0 0 10px #ccc;
 			position: relative;
