--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -645,11 +645,13 @@ section.single-post {
 }
 .entry-content blockquote,
 .comment-content blockquote {
-	margin-bottom: 24px;
-	margin-bottom: 1.714285714rem;
-	padding: 24px;
-	padding: 1.714285714rem;
+	margin: 0 0 24px 0;
+	margin: 0 0 1.714285714rem 0;
+	padding: 10px 0 15px 30px;
+	padding: 0.625rem 0 0.9375rem 1.875rem;
+	font-family: "Times New Roman", $Lora;
 	font-style: italic;
+	border-left: 5px solid #000;
 }
 .entry-content blockquote p:last-child,
 .comment-content blockquote p:last-child {
