--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -485,6 +485,13 @@ section.single-post {
 				font-family: $SourceSansPro;
 				font-size: 35px;
 				font-weight: 800;
+				margin-bottom: 2px;
+			}
+
+			h2 {
+				font-family: $SourceSansPro;
+				font-size: 20px;
+				font-weight: normal;
 				margin-bottom: 30px;
 			}
 
